[vim: plugins] Added lightline.vim
Refer to commit f43844c91a89812e52dd71fc06703aeb5d222171 for more info.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim/pack/external/start/jellybeans.vim"]
 	path = vim/pack/external/start/jellybeans.vim
 	url = https://github.com/nanotech/jellybeans.vim
+[submodule "vim/pack/external/start/lightline.vim"]
+	path = vim/pack/external/start/lightline.vim
+	url = https://github.com/itchyny/lightline.vim
