[vim: plugins] Added quick-scope

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim/pack/external/start/lightline.vim"]
 	path = vim/pack/external/start/lightline.vim
 	url = https://github.com/itchyny/lightline.vim
+[submodule "vim/pack/external/start/quick-scope"]
+	path = vim/pack/external/start/quick-scope
+	url = https://github.com/unblevable/quick-scope
