--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,5 @@
+set -g default-terminal "screen-256color"
+
 # Remap prefix to 
 set -g prefix C-space
 unbind C-b
@@ -5,6 +7,22 @@ bind C-space send-prefix
 
 # Bindings
 unbind r; bind r source-file ~/.tmux.conf	# Reload configuration
+bind | split-window -h						# Horizontal split
+bind - split-window -v						# Vertical split
 
-set pane-active-border-style "fg=#ffb52a"
-set pane-border-style "fg#5f5f5f"
+# Border options
+set -g pane-active-border-style "fg=#ffb52a"	# Active border
+set -g pane-border-style "fg=#5f5f5f"			# Border
+
+# Status line
+set -g status-interval 1															# Update status line every seconds
+set -g status-style bg="#2f2f2f",fg="#f1f1f1"										# Default status line appearance
+set -g status-left "#[fg=#ffb52a#,bg=#3c3c3c,bold]"									# Change colours
+set -ga status-left " #{?client_prefix,!,}#{session_name} "							# Session name and marker when prefix is pressed
+set -ga status-left "#[fg=#f1f1f1]#[bg=#2c2c2c]"									# Restore colors
+set -g window-status-current-format "#[fg=#1c1c1c#,bg=#ffb52a] #I:#W "				# Active window
+set -ga window-status-current-format "#[fg=#f1f1f1]#[bg=#2c2c2c]"					# Restore colors
+set -g window-status-format "#[fg=#f1f1f1,bg=#2c2c2c] #I:#W "						# Other windows
+set -ga window-status-format "#[fg=#f1f1f1]#[bg=#2c2c2c]"							# Restore colors
+set -g status-right '#[fg=#f1f1f1,bg=#4c4c4c] %H:%M:%S - #[fg=#f1f1f1]%Y.%m.%d '	# Time and date
+set -ga status-right "#[fg=#f1f1f1]#[bg=#2c2c2c]"									# Restore colors
