Major changes after a LOOOONG time

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,28 +1,47 @@
-set -g default-terminal "screen-256color"
+# General setting
+set -ga terminal-overrides ",xterm:Tc"
+set -g mouse on
+set -g base-index 1
+setw -g pane-base-index 1
+set-option -g allow-rename off
+set-option -sg escape-time 10
+set-option -g focus-events on
+set-option -g default-terminal "screen-256color"
 
-# Remap prefix to 
-set -g prefix C-space
+# Style 
+## Border
+set -g pane-active-border-style "fg=#ea94ea"
+set -g pane-border-style "fg=#3b3b3b"
+
+## Status line
+set -g status-interval 1															# Update status line every seconds
+set -g status-style bg="#2f2f2f",fg="#f1f1f1"										# Default status line appearance
+set -g status-left "#[fg=#ea94ea#,bg=#3c3c3c,bold]"									# Change colours
+set -ga status-left " #{?client_prefix,!,}#{session_name} "							# Session name and marker when prefix is pressed
+set -ga status-left "#[fg=#f1f1f1]#[bg=#2c2c2c]"									# Restore colors
+set -g window-status-current-format "#[fg=#1c1c1c#,bg=#ea94ea] #I:#W "				# Active window
+set -ga window-status-current-format "#[fg=#f1f1f1]#[bg=#2c2c2c]"					# Restore colors
+set -g window-status-format "#[fg=#f1f1f1,bg=#2c2c2c] #I:#W "						# Other windows
+set -ga window-status-format "#[fg=#f1f1f1]#[bg=#2c2c2c]"							# Restore colors
+set -g status-right '#[fg=#f1f1f1,bg=#4c4c4c] %H:%M:%S - #[fg=#f1f1f1]%Y.%m.%d '	# Time and date
+set -ga status-right "#[fg=#f1f1f1]#[bg=#2c2c2c]"									# Restore colors
+
+# Remap prefix to space
+set -g prefix C-a
 unbind C-b
-bind C-space send-prefix
+bind C-a send-prefix
 
 # Bindings
 unbind r; bind r source-file ~/.tmux.conf	# Reload configuration
 bind | split-window -h						# Horizontal split
 bind - split-window -v						# Vertical split
 
-# Border options
-set -g pane-active-border-style "fg=#ffb52a"	# Active border
-set -g pane-border-style "fg=#5f5f5f"			# Border
+# Tmux-vim compatibility
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
-# Status line
-set -g status-interval 1															# Update status line every seconds
-set -g status-style bg="#2f2f2f",fg="#f1f1f1"										# Default status line appearance
-set -g status-left "#[fg=#ffb52a#,bg=#3c3c3c,bold]"									# Change colours
-set -ga status-left " #{?client_prefix,!,}#{session_name} "							# Session name and marker when prefix is pressed
-set -ga status-left "#[fg=#f1f1f1]#[bg=#2c2c2c]"									# Restore colors
-set -g window-status-current-format "#[fg=#1c1c1c#,bg=#ffb52a] #I:#W "				# Active window
-set -ga window-status-current-format "#[fg=#f1f1f1]#[bg=#2c2c2c]"					# Restore colors
-set -g window-status-format "#[fg=#f1f1f1,bg=#2c2c2c] #I:#W "						# Other windows
-set -ga window-status-format "#[fg=#f1f1f1]#[bg=#2c2c2c]"							# Restore colors
-set -g status-right '#[fg=#f1f1f1,bg=#4c4c4c] %H:%M:%S - #[fg=#f1f1f1]%Y.%m.%d '	# Time and date
-set -ga status-right "#[fg=#f1f1f1]#[bg=#2c2c2c]"									# Restore colors
+bind-key -n C-h  if-shell  "$is_vim"  "send-keys C-h"  "select-pane -L"
+bind-key -n C-j  if-shell  "$is_vim"  "send-keys C-j"  "select-pane -D"
+bind-key -n C-k  if-shell  "$is_vim"  "send-keys C-k"  "select-pane -U"
+bind-key -n C-l  if-shell  "$is_vim"  "send-keys C-l"  "select-pane -R"
+bind-key -n C-\  if-shell  "$is_vim"  "send-keys C-\\" "select-pane -l"
