Changed leader to Ctrl+Space

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,9 +27,9 @@ set -g status-right '#[fg=#f1f1f1,bg=#4c4c4c] %H:%M:%S - #[fg=#f1f1f1]%Y.%m.%d '
 set -ga status-right "#[fg=#f1f1f1]#[bg=#2c2c2c]"									# Restore colors
 
 # Remap prefix to space
-set -g prefix C-a
+set -g prefix C-space
 unbind C-b
-bind C-a send-prefix
+bind C-space send-prefix
 
 # Bindings
 unbind r; bind r source-file ~/.tmux.conf	# Reload configuration
