--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,21 +10,21 @@ set-option -g default-terminal "screen-256color"
 
 # Style 
 ## Border
-set -g pane-active-border-style "fg=#ea94ea"
-set -g pane-border-style "fg=#3b3b3b"
+set -g pane-active-border-style "fg=#ff79c6"
+set -g pane-border-style "fg=#bd93f9"
 
 ## Status line
 set -g status-interval 1															# Update status line every seconds
-set -g status-style bg="#2f2f2f",fg="#f1f1f1"										# Default status line appearance
-set -g status-left "#[fg=#ea94ea#,bg=#3c3c3c,bold]"									# Change colours
+set -g status-style bg="#282a36",fg="#f8f8f2"										# Default status line appearance
+set -g status-left "#[fg=#ff79c6,bg=#44475a,bold]"									# Change colours
 set -ga status-left " #{?client_prefix,!,}#{session_name} "							# Session name and marker when prefix is pressed
-set -ga status-left "#[fg=#f1f1f1]#[bg=#2c2c2c]"									# Restore colors
-set -g window-status-current-format "#[fg=#1c1c1c#,bg=#ea94ea] #I:#W "				# Active window
-set -ga window-status-current-format "#[fg=#f1f1f1]#[bg=#2c2c2c]"					# Restore colors
-set -g window-status-format "#[fg=#f1f1f1,bg=#2c2c2c] #I:#W "						# Other windows
-set -ga window-status-format "#[fg=#f1f1f1]#[bg=#2c2c2c]"							# Restore colors
-set -g status-right '#[fg=#f1f1f1,bg=#4c4c4c] %H:%M:%S - #[fg=#f1f1f1]%Y.%m.%d '	# Time and date
-set -ga status-right "#[fg=#f1f1f1]#[bg=#2c2c2c]"									# Restore colors
+set -ga status-left "#[fg=#f8f8f2]#[bg=#bd93f9]"									# Restore colors
+set -g window-status-current-format "#[fg=#282a36#,bg=#ff79c6] #I:#W "				# Active window
+set -ga window-status-current-format "#[fg=#282a36]#[bg=#ff79c6]"					# Restore colors
+set -g window-status-format "#[fg=#f8f8f2,bg=#282a36] #I:#W "						# Other windows
+set -ga window-status-format "#[fg=#f8f8f2]#[bg=#282a36]"							# Restore colors
+set -g status-right '#[fg=#f8f8f2,bg=#44475a] %H:%M:%S - #[fg=#f8f8f2]%Y.%m.%d '	# Time and date
+set -ga status-right "#[fg=#f8f8f2]#[bg=#bd93f9]"									# Restore colors
 
 # Remap prefix to space
 set -g prefix C-space
