Minor colors change

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,8 +10,8 @@ set-option -g default-terminal "screen-256color"
 
 # Style 
 ## Border
-set -g pane-active-border-style "fg=#ff79c6"
-set -g pane-border-style "fg=#bd93f9"
+set -g pane-active-border-style "fg=#1B1D25"
+set -g pane-border-style "fg=#BD93F9"
 
 ## Status line
 set -g status-interval 1															# Update status line every seconds
