chore(git): Ignore Julia compiled binaries (*.so)
Since commit 31202eab, I may experiment with adding a couple of more
precompiled Julia things in my dot files. They are to large, therefore I
prefer to ignore them from all git things.

--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,7 @@ tags
 # Persistent undo
 [._]*.un~
 
+# Julia precompiled binaries
+*.so
+
 # End of https://www.toptal.com/developers/gitignore/api/vim
