--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,11 +7,12 @@ set-option -g allow-rename off
 set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -g default-terminal "screen-256color"
+set-option -g renumber-windows on
 
 # Style 
 ## Border
-set -g pane-active-border-style "fg=#1B1D25"
-set -g pane-border-style "fg=#BD93F9"
+set -g pane-border-style "fg=#1B1D25"
+set -g pane-active-border-style "fg=#BD93F9"
 
 ## Status line
 set -g status-interval 1															# Update status line every seconds
