--- a/polybar/config
+++ b/polybar/config
@@ -34,16 +34,40 @@ modules-left        = bspwm date
 modules-center      = 
 modules-right       = memory cpu battery pulseaudio
 tray-position       = right
-tray-padding        =1
+tray-padding        = 1
 cursor-click        = pointer
 cursor-scroll       = ns-resize
 override-redirect   = false
 wm-restack          = bspwm
+monitor = eDP
+
+[bar/cvv_external]
+width               = 100%
+height              = 28
+fixed-center        = true
+background          = ${colors.background}
+foreground          = ${colors.foreground}
+padding-left        = 1
+padding-right       = 1
+module-margin-left  = 2
+module-margin-right = 1
+font-0              = unifont:size=12;2
+font-1              = unifont:size=12;2:weight=bold
+modules-left        = bspwm date
+modules-center      = 
+modules-right       = memory cpu battery pulseaudio
+tray-position       = right
+tray-padding        = 1
+cursor-click        = pointer
+cursor-scroll       = ns-resize
+override-redirect   = false
+wm-restack          = bspwm
+monitor = DisplayPort-0
 
 [module/bspwm]
 type = internal/bspwm
 
-label-focused            = "%name%"
+label-focused            = %name%
 label-focused-foreground = ${colors.background}
 label-focused-background = ${colors.base04}
 label-focused-padding    = 1
