--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,17 +15,17 @@ set -g pane-border-style "fg=#1B1D25"
 set -g pane-active-border-style "fg=#BD93F9"
 
 ## Status line
-set -g status-interval 1															# Update status line every seconds
-set -g status-style bg="#282a36",fg="#f8f8f2"										# Default status line appearance
-set -g status-left "#[fg=#ff79c6,bg=#44475a,bold]"									# Change colours
-set -ga status-left " #{?client_prefix,!,}#{session_name} "							# Session name and marker when prefix is pressed
-set -ga status-left "#[fg=#f8f8f2]#[bg=#bd93f9]"									# Restore colors
-set -g window-status-current-format "#[fg=#282a36#,bg=#ff79c6] #I:#W "				# Active window
-set -ga window-status-current-format "#[fg=#282a36]#[bg=#ff79c6]"					# Restore colors
-set -g window-status-format "#[fg=#f8f8f2,bg=#282a36] #I:#W "						# Other windows
-set -ga window-status-format "#[fg=#f8f8f2]#[bg=#282a36]"							# Restore colors
-set -g status-right '#[fg=#f8f8f2,bg=#44475a] %H:%M:%S - #[fg=#f8f8f2]%Y.%m.%d '	# Time and date
-set -ga status-right "#[fg=#f8f8f2]#[bg=#bd93f9]"									# Restore colors
+set -g status-interval 1																	# Update status line every seconds
+set -g status-style bg="#282a36",fg="#f8f8f2"												# Default status line appearance
+set -g status-left "#[fg=#ff79c6,bg=#44475a,bold]"											# Change colours
+set -ga status-left " #{?client_prefix,!,}#{session_name} "									# Session name and marker when prefix is pressed
+set -ga status-left "#[fg=#f8f8f2]#[bg=#bd93f9]"											# Restore colors
+set -g window-status-current-format "#[fg=#282a36#,bg=#ff79c6] #I:#W "						# Active window
+set -ga window-status-current-format "#[fg=#282a36]#[bg=#ff79c6]"							# Restore colors
+set -g window-status-format "#[fg=#f8f8f2,bg=#282a36] #I:#W "								# Other windows
+set -ga window-status-format "#[fg=#f8f8f2]#[bg=#282a36]"									# Restore colors
+set -g status-right '#(pomo) #[fg=#f8f8f2,bg=#44475a] %H:%M:%S - #[fg=#f8f8f2]%Y.%m.%d '	# Pomodoro, current time and date
+set -ga status-right "#[fg=#f8f8f2]#[bg=#bd93f9]"											# Restore colors
 
 # Remap prefix to space
 set -g prefix C-space
