--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,13 +24,11 @@ set -g window-status-current-format "#[fg=#282a36#,bg=#ff79c6] #I:#W "						# Ac
 set -ga window-status-current-format "#[fg=#282a36]#[bg=#ff79c6]"							# Restore colors
 set -g window-status-format "#[fg=#f8f8f2,bg=#282a36] #I:#W "								# Other windows
 set -ga window-status-format "#[fg=#f8f8f2]#[bg=#282a36]"									# Restore colors
-set -g status-right '#(pomo) #[fg=#f8f8f2,bg=#44475a] %H:%M:%S - #[fg=#f8f8f2]%Y.%m.%d '	# Pomodoro, current time and date
 set -ga status-right "#[fg=#f8f8f2]#[bg=#bd93f9]"											# Restore colors
 
 # Remap prefix to space
-set -g prefix C-space
+set -g prefix C-a
 unbind C-b
-bind C-space send-prefix
 
 # Bindings
 unbind r; bind r source-file ~/.tmux.conf	# Reload configuration
