refactor(nvim): Neovim configuration as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim/plugged/YouCompleteMe"]
 	path = vim/plugged/YouCompleteMe
 	url = https://github.com/ycm-core/YouCompleteMe
+[submodule "nvim"]
+	path = nvim
+	url = git@github.com:cvigilv/mateo.nvim
