--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,3 +44,9 @@ bind-key -n C-j  if-shell  "$is_vim"  "send-keys C-j"  "select-pane -D"
 bind-key -n C-k  if-shell  "$is_vim"  "send-keys C-k"  "select-pane -U"
 bind-key -n C-l  if-shell  "$is_vim"  "send-keys C-l"  "select-pane -R"
 bind-key -n C-\  if-shell  "$is_vim"  "send-keys C-\\" "select-pane -l"
+
+# Resize panes with Vim-like keybinds
+bind-key -r -T prefix h resize-pane -L 2
+bind-key -r -T prefix j resize-pane -D 2
+bind-key -r -T prefix k resize-pane -U 2
+bind-key -r -T prefix l resize-pane -L 2
