fix(tmux): right pane resizing was bound wrong

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -49,4 +49,4 @@ bind-key -n C-\  if-shell  "$is_vim"  "send-keys C-\\" "select-pane -l"
 bind-key -r -T prefix h resize-pane -L 2
 bind-key -r -T prefix j resize-pane -D 2
 bind-key -r -T prefix k resize-pane -U 2
-bind-key -r -T prefix l resize-pane -L 2
+bind-key -r -T prefix l resize-pane -R 2
