--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,3 +50,7 @@ bind-key -r -T prefix h resize-pane -L 2
 bind-key -r -T prefix j resize-pane -D 2
 bind-key -r -T prefix k resize-pane -U 2
 bind-key -r -T prefix l resize-pane -R 2
+
+# Start selection with 'v' and copy using 'y'
+bind-key -T copy-mode-vi v send-keys -X begin-selection 
+bind-key -T copy-mode-vi y send-keys -X copy-selection
