--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,12 +1,11 @@
 # General setting
-set -ga terminal-overrides ",xterm:Tc"
+set -ga terminal-overrides ",*256col*:Tc"
 set -g mouse on
 set -g base-index 1
 setw -g pane-base-index 1
 set-option -g allow-rename off
 set-option -sg escape-time 10
 set-option -g focus-events on
-set-option -g default-terminal "screen-256color"
 set-option -g renumber-windows on
 
 # Style 
