feat: update tmux conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,40 +1,43 @@
 # General setting
 set -ga terminal-overrides ",*256col*:Tc"
 set -g mouse on
-set -g base-index 1
-setw -g pane-base-index 1
 set-option -g allow-rename off
 set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -g renumber-windows on
 
-# Style 
+# Style
 ## Border
-set -g pane-border-style "fg=#1B1D25"
-set -g pane-active-border-style "fg=#BD93F9"
+set -g pane-border-style "fg=#020202"
+set -g pane-active-border-style "fg=#f1f1f1"
 
 ## Status line
-set -g status-interval 1                                               # Update status line every seconds
-set -g status-style bg="#282a36",fg="#f8f8f2"                          # Default status line appearance
-set -g status-left "#[fg=#ff79c6,bg=#44475a,bold]"                     # Change colours
-set -ga status-left " #{?client_prefix,!,}#{session_name} "            # Session name and marker when prefix is pressed
-set -ga status-left "#[fg=#f8f8f2]#[bg=#bd93f9]"                       # Restore colors
-set -g window-status-current-format "#[fg=#282a36#,bg=#ff79c6] #I:#W " # Active window
-set -ga window-status-current-format "#[fg=#282a36]#[bg=#ff79c6]"      # Restore colors
-set -g window-status-format "#[fg=#f8f8f2,bg=#282a36] #I:#W "          # Other windows
-set -ga window-status-format "#[fg=#f8f8f2]#[bg=#282a36]"              # Restore colors
-set -ga status-right "#[fg=#f8f8f2]#[bg=#bd93f9]"                      # Restore colors
+set -g status-interval 1
+set -g status-left-length 32
+set -g status-justify centre
 
-# Remap prefix to space
-set -g prefix C-a
+set -g status-style bg="#020202",fg="#f1f1f1"
+set -g status-left " #{?client_prefix,! ,  }"
+set -ga status-left "#{session_name} "
+set -g status-right "#{pane_title} ◦ %H:%M %d/%m/%y  "
+set -g window-status-current-format "#[bg=#f1f1f1,fg=#020202]    #W    "
+set -g window-status-format " #I⋅#W "
+
+# Keybinds
+## Prefix
 unbind C-b
+set-option -g prefix C-s
+bind-key C-s send-prefix
 
-# Bindings
-unbind r; bind r source-file ~/.tmux.conf # Reload configuration
-bind | split-window -h                    # Horizontal split
-bind - split-window -v                    # Vertical split
+## Bindings
+unbind r; bind r source-file ~/.tmux.conf
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
-# Tmux-vim compatibility
+## Tmux handshakes (Neo)Vim {{{
+### Seamless focusing between tmux and nvim
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
@@ -44,12 +47,13 @@ bind-key -n C-k  if-shell  "$is_vim"  "send-keys C-k"  "select-pane -U"
 bind-key -n C-l  if-shell  "$is_vim"  "send-keys C-l"  "select-pane -R"
 bind-key -n C-\  if-shell  "$is_vim"  "send-keys C-\\" "select-pane -l"
 
-# Resize panes with Vim-like keybinds
+### Resize panes with Vim-like keybinds
 bind-key -r -T prefix h resize-pane -L 2
 bind-key -r -T prefix j resize-pane -D 2
 bind-key -r -T prefix k resize-pane -U 2
 bind-key -r -T prefix l resize-pane -R 2
 
-# Start selection with 'v' and copy using 'y'
+### Start selection with 'v' and copy using 'y'
 bind-key -T copy-mode-vi v send-keys -X begin-selection 
 bind-key -T copy-mode-vi y send-keys -X copy-selection
+# }}}
