feat(tmux): add some niceties to tmux configuration

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,7 @@ set-option -g allow-rename off
 set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -g renumber-windows on
+set-option -g history-limit 5000
 
 # Style
 ## Border
@@ -12,7 +13,8 @@ set -g pane-border-style "fg=#020202"
 set -g pane-active-border-style "fg=#f1f1f1"
 
 ## Status line
-set -g status-interval 1
+set -g status-position top
+set -g status-interval 5
 set -g status-left-length 32
 set -g status-justify centre
 
@@ -20,6 +22,7 @@ set -g status-style bg="#020202",fg="#f1f1f1"
 set -g status-left " #{?client_prefix,! ,  }"
 set -ga status-left "#{session_name} "
 set -g status-right "#{pane_title} ◦ %H:%M %d/%m/%y  "
+set -ga status-right "◦ Ns=#(exec tmux ls| wc -l) "
 set -g window-status-current-format "#[bg=#f1f1f1,fg=#020202]    #W    "
 set -g window-status-format " #I⋅#W "
 
