feat(tmux): add status flag to tab name

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -23,8 +23,8 @@ set -g status-left " #{?client_prefix,! ,  }"
 set -ga status-left "#{session_name} "
 set -g status-right "#{pane_title} ◦ %H:%M %d/%m/%y  "
 set -ga status-right "◦ Ns=#(exec tmux ls| wc -l) "
-set -g window-status-current-format "#[bg=#f1f1f1,fg=#020202]    #W    "
-set -g window-status-format " #I⋅#W "
+set -g window-status-current-format "#[bg=#f1f1f1,fg=#020202]    #W#F    "
+set -g window-status-format " #I⋅#W#F "
 
 # Keybinds
 ## Prefix
