--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -33,7 +33,7 @@ set-option -g prefix C-s
 bind-key C-s send-prefix
 
 ## Bindings
-unbind r; bind r source-file ~/.tmux.conf
+unbind r; bind r source-file ~/.config/tmux/tmux.conf
 bind | split-window -h
 bind - split-window -v
 unbind '"'
