feat(tmux): add current branch to session name

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -21,6 +21,7 @@ set -g status-justify centre
 set -g status-style bg="#020202",fg="#f1f1f1"
 set -g status-left " #{?client_prefix,! ,  }"
 set -ga status-left "#{session_name} "
+set -ga status-left "#(exec git rev-parse --abbrev-ref HEAD | grep . && echo \"⎇  $(git rev-parse --abbrev-ref HEAD) \"  || echo '')"
 set -g status-right "#{pane_title} ◦ %H:%M %d/%m/%y  "
 set -ga status-right "◦ Ns=#(exec tmux ls| wc -l) "
 set -g window-status-current-format "#[bg=#f1f1f1,fg=#020202]    #W#F    "
