--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,11 @@ tags
 # Persistent undo
 [._]*.un~
 
+# End of https://www.toptal.com/developers/gitignore/api/vim
+
 # Julia precompiled binaries
 *.so
 
-# End of https://www.toptal.com/developers/gitignore/api/vim
+.julia/
+!.julia/environments/nvim-lspconfig
 
-.julia/environments/nvim-lspconfig/Manifest.toml
-.julia/environments/nvim-lspconfig/Project.toml
-.julia/environments/nvim-lspconfig/bin/*
-.julia/environments/nvim-lspconfig/packagecompiler/*
