chore(tmux): simplify statusline and revert to Ctrl-B

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,7 +10,7 @@ set-option -g history-limit 5000
 # Style
 ## Border
 set -g pane-border-style "fg=#020202"
-set -g pane-active-border-style "fg=#f1f1f1"
+set -g pane-active-border-style "fg=#fffdf9"
 
 ## Status line
 set -g status-position top
@@ -18,21 +18,24 @@ set -g status-interval 5
 set -g status-left-length 32
 set -g status-justify centre
 
-set -g status-style bg="#020202",fg="#f1f1f1"
+set -g status-style "fg=#020202,bg=#fffdf9"
+set -g window-status-current-style "bg=#020202,fg=#fffdf9,bold"
+set -g window-status-style "fg=#020202,bg=#fffdf9"
+
 set -g status-left " #{?client_prefix,! ,  }"
-set -ga status-left "#{session_name} "
-set -ga status-left "#(exec git rev-parse --abbrev-ref HEAD | grep . && echo \"⎇  $(git rev-parse --abbrev-ref HEAD) \"  || echo '')"
-set -g status-right "#{pane_title} ◦ %H:%M %d/%m/%y  "
-set -ga status-right "◦ Ns=#(exec tmux ls| wc -l) "
-set -g window-status-current-format "#[bg=#f1f1f1,fg=#020202]    #W#F    "
-set -g window-status-format " #I⋅#W#F "
+set -ga status-left "  #{session_name}"
+set -g status-right " 󰍹 #{pane_title} "
+set -ga status-right ". %H:%M %d/%m/%y "
+
+set -g  window-status-format "#[bg=#fffdf9,fg=#faf5ec]"
+set -ga window-status-format "#[fg=#020202,bg=#faf5ec]#I  #W#F "
+set -ga window-status-format "#[bg=#fffdf9,fg=#faf5ec]"
+
+set -g window-status-current-format "#[fg=#020202,bg=#fffdf9]"
+set -ga window-status-current-format "#[bg=#020202,fg=#fffdf9]#I  #W#F "
+set -ga window-status-current-format "#[fg=#020202,bg=#fffdf9]"
 
 # Keybinds
-## Prefix
-unbind C-b
-set-option -g prefix C-s
-bind-key C-s send-prefix
-
 ## Bindings
 unbind r; bind r source-file ~/.config/tmux/tmux.conf
 bind | split-window -h
@@ -58,6 +61,6 @@ bind-key -r -T prefix k resize-pane -U 2
 bind-key -r -T prefix l resize-pane -R 2
 
 ### Start selection with 'v' and copy using 'y'
-bind-key -T copy-mode-vi v send-keys -X begin-selection 
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 # }}}
