--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,16 +1,6 @@
 [colors]
-bg       = #121317
-fg       = #EDF0FC
-light_bg = #464d72
-light_fg = #DCE2F9
-yellow   = #ECBE7B
-cyan     = #008080
-darkblue = #081633
-green    = #98be65
-orange   = #FF8800
-violet   = #a9a1e1
-magenta  = #6c71c4
-blue     = #51afef
+bg       = #000000
+fg       = #ffffff
 red      = #ec5f67
 
 [bar/cvv]
@@ -21,29 +11,32 @@ background          = ${colors.bg}
 foreground          = ${colors.fg}
 padding-left        = 1
 padding-right       = 1
-font-0              = unifont:size=12;2
+font-0              = JetBrains Mono:size=10;2
+font-1              = Noto Color Emoji:size=10;2
+font-2              = Symbols Nerd Font Mono:size=10;2
 modules-left        = bspwm
-modules-center      = spotify date
-modules-right       = memory cpu pulseaudio xkeyboard
-tray-position       = right
-tray-padding        = 0
+modules-center      = spotify
+modules-right       = memory cpu pulseaudio xkeyboard tray
 cursor-click        = pointer
 cursor-scroll       = ns-resize
 override-redirect   = false
 wm-restack          = bspwm
-monitor             = HDMI-0
+monitor             = DP-0
+
+[module/tray]
+type = internal/tray
 
 [module/bspwm]
 type = internal/bspwm
 
 label-focused            = %name%
 label-focused-foreground = ${colors.bg}
-label-focused-background = ${colors.magenta}
+label-focused-background = ${colors.fg}
 label-focused-padding    = 1
 
 label-occupied           = %name%
-label-occupied-foreground  = ${colors.light_bg}
-label-occupied-background  = ${colors.bg}
+label-occupied-foreground= ${colors.fg}
+label-occupied-background= ${colors.bg}
 label-occupied-padding   = 1
 
 label-urgent             = !
@@ -52,50 +45,38 @@ label-urgent-background  = ${colors.red}
 label-urgent-padding     = 1
 
 label-empty              =
-label-empty-foreground   = ${colors.light_fg}
-label-empty-background   = ${colors.light_bg}
+label-empty-foreground   = ${colors.fg}
+label-empty-background   = ${colors.bg}
 label-empty-padding      =
-
-[module/date]
-type              = internal/date
-interval          = 1
-date              = %Y-%m-%d%
-time              = %H:%M
-label             = %date% :: %time%
-format            = <label>
-format-foreground = ${colors.light_bg}
-format-margin     = 5
 
 [module/spotify]
 type               = custom/script
 exec               = ~/.config/polybar/scripts/scroll_spotify_status.sh
 tail               = true
 interval           = 1
-format-foreground  = ${colors.light_bg}
-format             = ♫ <label>
+format-foreground  = ${colors.fg}
+format             = 󰎆 <label>
 format-margin      = 1
 format-fail        =
 format-fail-margin = 0
 
 [module/cpu]
 type                   = internal/cpu
-interval               = 0.1
-format-foreground      = ${colors.yellow}
+format-foreground      = ${colors.fg}
 format-warn-foreground = ${colors.red}
 label                  = %percentage%%
-format                 = ⚡  <label>
-format-warn            = !⚡ <label>
+label-warn             = !%percentage%%
+format                 =  <label>
 format-margin          = 1
 format-warn-margin     = 1
 
 [module/memory]
 type                   = internal/memory
-interval               = 0.1
-label                  = %percentage_used%%
-format-foreground      = ${colors.green}
+format-foreground      = ${colors.fg}
 format-warn-foreground = ${colors.red}
-format                 = ⌯  <label>
-format-warn            = !⌯ <label>
+label                  = %percentage_used%%
+label-warn             = !%percentage_used%%
+format                 = 󰍛 <label>
 format-margin          = 1
 format-warn-margin     = 1
 
@@ -104,12 +85,12 @@ type                     = internal/pulseaudio
 use-ui-max               = true
 interval                 = 1
 click-right              = pavucontrol
-format-volume            = ⏿ <label-volume>
+format-volume            = 󰕾 <label-volume>
 label-volume             = %percentage%%
-format-muted             = ⏿ <label-muted>
-label-muted              = -
-format-volume-foreground = ${colors.light_bg}
-format-muted-foreground  = ${colors.light_bg}
+format-muted             = 󰝟<label-muted>
+label-muted              =
+format-volume-foreground = ${colors.fg}
+format-muted-foreground  = ${colors.fg}
 format-volume-margin     = 1
 format-muted-margin      = 1
 
@@ -117,10 +98,9 @@ format-muted-margin      = 1
 type              = internal/xkeyboard
 format-padding    = 0
 format-background = ${colors.bg}
-format-foreground = ${colors.light_bg}
-format            = ⌨ <label-layout> <label-indicator>
+format-foreground = ${colors.fg}
+format            = 󰌌 <label-layout> <label-indicator>
 format-margin     = 1
-
 
 [settings]
 screenchange-reload = true
