feat(tmux): revamp config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-# General setting
+# General setting {{{
 set -ga terminal-overrides ",*256col*:Tc"
 set -g mouse on
 set-option -g allow-rename off
@@ -6,13 +6,13 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -g renumber-windows on
 set-option -g history-limit 5000
-
-# Style
-## Border
+# }}}
+# Style {{{
+## Border {{{
 set -g pane-border-style "fg=#020202"
 set -g pane-active-border-style "fg=#fffdf9"
-
-## Status line
+## }}}
+## Status line {{{
 set -g status-position top
 set -g status-interval 5
 set -g status-left-length 32
@@ -27,22 +27,40 @@ set -ga status-left "  #{session_name}"
 set -g status-right " 󰍹 #{pane_title} "
 set -ga status-right ". %H:%M %d/%m/%y "
 
-set -g  window-status-format "#[bg=#fffdf9,fg=#faf5ec]"
-set -ga window-status-format "#[fg=#020202,bg=#faf5ec]#I  #W#F "
-set -ga window-status-format "#[bg=#fffdf9,fg=#faf5ec]"
+set -g  window-status-format "#[bg=#fffdf9,fg=#E6E4E0]"
+set -ga window-status-format "#[fg=#020202,bg=#E6E4E0]#I  #W#F "
+set -ga window-status-format "#[bg=#fffdf9,fg=#E6E4E0]"
 
 set -g window-status-current-format "#[fg=#020202,bg=#fffdf9]"
 set -ga window-status-current-format "#[bg=#020202,fg=#fffdf9]#I  #W#F "
 set -ga window-status-current-format "#[fg=#020202,bg=#fffdf9]"
-
-# Keybinds
-## Bindings
+## }}}
+# }}}
+# Keybinds {{{
+## Misc {{{
 unbind r; bind r source-file ~/.config/tmux/tmux.conf
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
-
+## }}}
+# Pane / tab management {{{
+unbind '"'; bind | split-window -h
+unbind '%'; bind - split-window -v
+## }}}
+## Movement {{{
+bind-key l last-window
+## }}}
+## Resize panes with arrow keys {{{
+unbind Left
+unbind Down
+unbind Up
+unbind Right
+bind-key -r -T prefix Left resize-pane -L 2
+bind-key -r -T prefix Down resize-pane -D 2
+bind-key -r -T prefix Up resize-pane -U 2
+bind-key -r -T prefix Right resize-pane -R 2
+bind-key -r -T prefix S-Left resize-pane -L 20
+bind-key -r -T prefix S-Down resize-pane -D 20
+bind-key -r -T prefix S-Up resize-pane -U 20
+bind-key -r -T prefix S-Right resize-pane -R 20
+# }}}
 ## Tmux handshakes (Neo)Vim {{{
 ### Seamless focusing between tmux and nvim
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -54,13 +72,8 @@ bind-key -n C-k  if-shell  "$is_vim"  "send-keys C-k"  "select-pane -U"
 bind-key -n C-l  if-shell  "$is_vim"  "send-keys C-l"  "select-pane -R"
 bind-key -n C-\  if-shell  "$is_vim"  "send-keys C-\\" "select-pane -l"
 
-### Resize panes with Vim-like keybinds
-bind-key -r -T prefix h resize-pane -L 2
-bind-key -r -T prefix j resize-pane -D 2
-bind-key -r -T prefix k resize-pane -U 2
-bind-key -r -T prefix l resize-pane -R 2
-
 ### Start selection with 'v' and copy using 'y'
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
+## }}}
 # }}}
