chore: ignore julia files outside LSP server

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,15 @@ tags
 .julia/environments/nvim-lspconfig/Project.toml
 .julia/environments/nvim-lspconfig/bin/*
 .julia/environments/nvim-lspconfig/packagecompiler/*
+.julia/artifacts/
+.julia/clones/
+.julia/compiled/
+.julia/environments/v1.10/
+.julia/juliaup/
+.julia/logs/
+.julia/packages/
+.julia/pluto_notebooks/
+.julia/registries/
+.julia/scratchspaces/
+
 .DS_Store
