chore: update after long time

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,12 @@
 # General setting {{{
-set -ga terminal-overrides ",*256col*:Tc"
+set -g default-terminal "tmux-256color"
+
+set-option -gas terminal-overrides "*:Tc" # true color support
+set-option -gas terminal-overrides "*:RGB" # true color support
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
+# set -ga terminal-overrides ",*256col*:Tc"
 set -g mouse on
 set-option -g allow-rename off
 set-option -sg escape-time 10
@@ -7,38 +14,10 @@ set-option -g focus-events on
 set-option -g renumber-windows on
 set-option -g history-limit 5000
 # }}}
-# Style {{{
-## Border {{{
-set -g pane-border-style "fg=#020202"
-set -g pane-active-border-style "fg=#fffdf9"
-## }}}
-## Status line {{{
-set -g status-position top
-set -g status-interval 5
-set -g status-left-length 32
-set -g status-justify centre
-
-set -g status-style "fg=#020202,bg=#fffdf9"
-set -g window-status-current-style "bg=#020202,fg=#fffdf9,bold"
-set -g window-status-style "fg=#020202,bg=#fffdf9"
-
-set -g status-left " #{?client_prefix,! ,  }"
-set -ga status-left "  #{session_name}"
-set -g status-right " 󰍹 #{pane_title} "
-set -ga status-right ". %H:%M %d/%m/%y "
-
-set -g  window-status-format "#[bg=#fffdf9,fg=#E6E4E0]"
-set -ga window-status-format "#[fg=#020202,bg=#E6E4E0]#I  #W#F "
-set -ga window-status-format "#[bg=#fffdf9,fg=#E6E4E0]"
-
-set -g window-status-current-format "#[fg=#020202,bg=#fffdf9]"
-set -ga window-status-current-format "#[bg=#020202,fg=#fffdf9]#I  #W#F "
-set -ga window-status-current-format "#[fg=#020202,bg=#fffdf9]"
-## }}}
-# }}}
 # Keybinds {{{
 ## Misc {{{
 unbind r; bind r source-file ~/.config/tmux/tmux.conf
+bind C-f display-popup
 ## }}}
 # Pane / tab management {{{
 unbind '"'; bind | split-window -h
@@ -75,5 +54,17 @@ bind-key -n C-\  if-shell  "$is_vim"  "send-keys C-\\" "select-pane -l"
 ### Start selection with 'v' and copy using 'y'
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
+## }}}
+# }}}
+# Style {{{
+## Border {{{
+set -g pane-active-border-style "fg=#000000"
+set -g pane-border-style "fg=#fffdf9"
+## }}}
+## Status line {{{
+set -g status-position top
+set -g status-interval 5
+set -g status-left-length 32
+set -g status-justify centre
 ## }}}
 # }}}
