chore: update, moved to MacOs

--- a/.config/tmux/tmux_light.conf
+++ b/.config/tmux/tmux_light.conf
@@ -1,16 +1,16 @@
-set -g status-style "fg=#000000,bg=#fffdf9"
-set -g window-status-current-style "bg=#000000,fg=#fffdf9,bold"
-set -g window-status-style "fg=#000000,bg=#fffdf9"
+set -g status-style "fg=#000000,bg=#ffffff"
+set -g window-status-current-style "bg=#000000,fg=#ffffff,bold"
+set -g window-status-style "fg=#000000,bg=#ffffff"
 
 set -g status-left " #{?client_prefix,! ,  }"
 set -ga status-left "#[bold]  #{session_name}"
 set -g status-right "#[bold] 󰍹 #{pane_title} "
 set -ga status-right ". %H:%M %d/%m/%y "
 
-set -g  window-status-format "#[bg=#fffdf9,fg=#e3e1dd]"
+set -g  window-status-format "#[bg=#ffffff,fg=#e3e1dd]"
 set -ga window-status-format "#[fg=#000000,bg=#e3e1dd]#I  #W#F "
-set -ga window-status-format "#[bg=#fffdf9,fg=#e3e1dd]"
+set -ga window-status-format "#[bg=#ffffff,fg=#e3e1dd]"
 
-set -g window-status-current-format "#[fg=#000000,bg=#fffdf9]"
-set -ga window-status-current-format "#[bg=#000000,fg=#f1efeb]#I  #W#F "
-set -ga window-status-current-format "#[fg=#000000,bg=#fffdf9]"
+set -g window-status-current-format "#[fg=#000000,bg=#ffffff]"
+set -ga window-status-current-format "#[bg=#000000,fg=#ffffff]#I  #W#F "
+set -ga window-status-current-format "#[fg=#000000,bg=#ffffff]"
