--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,6 +18,7 @@ set-option -g history-limit 5000
 ## Misc {{{
 unbind r; bind r source-file ~/.config/tmux/tmux.conf
 bind C-f display-popup
+unbind C-Space
 ## }}}
 # Pane / tab management {{{
 unbind '"'; bind | split-window -h
@@ -54,6 +55,13 @@ bind-key -n C-\  if-shell  "$is_vim"  "send-keys C-\\" "select-pane -l"
 ### Start selection with 'v' and copy using 'y'
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
+
+## Pop-ups
+bind C-w display-popup \
+  -d "#{pane_current_path}" \
+  -w 80% \
+  -h 80% 
+
 ## }}}
 # }}}
 # Style {{{
