--- a/.config/tmux/tmux_dark.conf
+++ b/.config/tmux/tmux_dark.conf
@@ -1,6 +1,6 @@
-set -g status-style "bg=#000000,fg=#fffdf9"
-set -g window-status-current-style "fg=#000000,bg=#fffdf9,bold"
-set -g window-status-style "bg=#000000,fg=#fffdf9"
+set -g status-style "bg=#000000,fg=#ffffff"
+set -g window-status-current-style "fg=#000000,bg=#ffffff,bold"
+set -g window-status-style "bg=#000000,fg=#ffffff"
 
 set -g status-left " #{?client_prefix,! ,  }"
 set -ga status-left "#[bold]  #{session_name}"
@@ -11,6 +11,6 @@ set -g  window-status-format "#[bg=#000000,fg=#555555]"
 set -ga window-status-format "#[fg=#fffdf9,bg=#555555]#I  #W#F "
 set -ga window-status-format "#[bg=#000000,fg=#555555]"
 
-set -g window-status-current-format "#[bg=#000000,fg=#f1efeb]"
-set -ga window-status-current-format "#[fg=#000000,bg=#f1efeb]#I  #W#F "
-set -ga window-status-current-format "#[bg=#000000,fg=#f1efeb]"
+set -g window-status-current-format "#[bg=#000000,fg=#ffffff]"
+set -ga window-status-current-format "#[fg=#000000,bg=#ffffff]#I  #W#F "
+set -ga window-status-current-format "#[bg=#000000,fg=#ffffff]"
