--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,78 +1,54 @@
-# General setting {{{
+# General setting
 set -g default-terminal "tmux-256color"
-
-set-option -gas terminal-overrides "*:Tc" # true color support
-set-option -gas terminal-overrides "*:RGB" # true color support
+set -gas terminal-overrides "*:Tc" # true color support
+set -gas terminal-overrides "*:RGB" # true color support
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-
-# set -ga terminal-overrides ",*256col*:Tc"
+set -sg escape-time 10
 set -g mouse on
-set-option -g allow-rename off
-set-option -sg escape-time 10
-set-option -g focus-events on
-set-option -g renumber-windows on
-set-option -g history-limit 5000
-# }}}
-# Keybinds {{{
-## Misc {{{
+set -g allow-rename off
+set -g focus-events on
+set -g renumber-windows on
+set -g history-limit 5000
+
+# Keybinds
+## Misc
 unbind r; bind r source-file ~/.config/tmux/tmux.conf
-bind C-f display-popup
-unbind C-Space
-## }}}
-# Pane / tab management {{{
+
+# Pane / tab management
 unbind '"'; bind | split-window -h
 unbind '%'; bind - split-window -v
-## }}}
-## Movement {{{
-bind-key l last-window
-## }}}
-## Resize panes with arrow keys {{{
-unbind Left
-unbind Down
-unbind Up
-unbind Right
-bind-key -r -T prefix Left resize-pane -L 2
-bind-key -r -T prefix Down resize-pane -D 2
-bind-key -r -T prefix Up resize-pane -U 2
-bind-key -r -T prefix Right resize-pane -R 2
-bind-key -r -T prefix S-Left resize-pane -L 20
-bind-key -r -T prefix S-Down resize-pane -D 20
-bind-key -r -T prefix S-Up resize-pane -U 20
-bind-key -r -T prefix S-Right resize-pane -R 20
-# }}}
-## Tmux handshakes (Neo)Vim {{{
-### Seamless focusing between tmux and nvim
+
+## Movement
+bind l last-window
+
+## Vim-like UX
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-
-bind-key -n C-h  if-shell  "$is_vim"  "send-keys C-h"  "select-pane -L"
-bind-key -n C-j  if-shell  "$is_vim"  "send-keys C-j"  "select-pane -D"
-bind-key -n C-k  if-shell  "$is_vim"  "send-keys C-k"  "select-pane -U"
-bind-key -n C-l  if-shell  "$is_vim"  "send-keys C-l"  "select-pane -R"
-bind-key -n C-\  if-shell  "$is_vim"  "send-keys C-\\" "select-pane -l"
-
-### Start selection with 'v' and copy using 'y'
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind -n C-h  if-shell  "$is_vim"  "send-keys C-h"  "select-pane -L"
+bind -n C-j  if-shell  "$is_vim"  "send-keys C-j"  "select-pane -D"
+bind -n C-k  if-shell  "$is_vim"  "send-keys C-k"  "select-pane -U"
+bind -n C-l  if-shell  "$is_vim"  "send-keys C-l"  "select-pane -R"
+bind -n C-\  if-shell  "$is_vim"  "send-keys C-\\" "select-pane -l"
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 ## Pop-ups
-bind C-w display-popup \
-  -d "#{pane_current_path}" \
-  -w 80% \
-  -h 80% 
+bind C-p display-popup -d "#{pane_current_path}" -w 80% -h 80%
+bind C-f display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+bind C-s display-popup -E "bash ~/git/caja-de-herramientas/sesh"
+bind C-c display-popup -E 'nvim -c "normal ,oC"'
 
-## }}}
-# }}}
-# Style {{{
-## Border {{{
+# Session management
+bind s choose-session
+bind S command-prompt -p "New session name:" "new-session -d -s '%%'"
+bind X confirm-before -p "Kill session #{session_name}? (y/n)" kill-session
+
+# Style
 set -g pane-active-border-style "fg=#000000"
 set -g pane-border-style "fg=#fffdf9"
-## }}}
-## Status line {{{
 set -g status-position top
 set -g status-interval 5
 set -g status-left-length 32
 set -g status-justify centre
-## }}}
-# }}}
