--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -36,9 +36,10 @@ bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 ## Pop-ups
 bind C-p display-popup -d "#{pane_current_path}" -w 80% -h 80%
-bind C-f display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
-bind C-s display-popup -E "bash ~/git/caja-de-herramientas/sesh"
+bind C-s display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+bind C-f display-popup -E "bash ~/git/caja-de-herramientas/sesh"
 bind C-c display-popup -E 'nvim -c "normal ,oC"'
+bind C-g display-popup -E 'open-github.sh'
 
 # Session management
 bind s choose-session
